memory app deck mischen fertig

--- a/memory.html
+++ b/memory.html
@@ -20,13 +20,18 @@
         </div>
     </div>
     <div id="unten">
-        <h3 id="player">Player</h3><h3 id="p-number">0</h3>
+        <h3 id="player">Player</h3>
+        <h3 id="p-number">0</h3>
         <h3 id="Stufe">Stufe</h3>
         <button id="einfach">Einfach</button>
-        <button id="normal">Normal</button>
+        <button id="normal">Mittel</button>
         <button id="schwer">Schwer</button>
         <h3 id="new-game">New Game</h3>
-        <h3 id="com">Com</h3><h3 id="c-number">0</h3>
+        <h3 id="com">Com</h3>
+        <h3 id="c-number">0</h3>
     </div>
 </body>
+<footer>
+    <p>Quelle der Icon-Grafiken: <a href='https://www.freepik.com/vectors/business'>Business vector created by macrovector - www.freepik.com</a></p>
+</footer>
 </html>
