com ausgearbeitet, counter für player-punkte

--- a/memory.html
+++ b/memory.html
@@ -21,14 +21,14 @@
     </div>
     <div id="unten">
         <h3 id="player">Player</h3>
-        <h3 id="p-number">0</h3>
+        <h3 id="p-number"></h3>
         <h3 id="Stufe">Stufe</h3>
         <button id="einfach">Einfach</button>
         <button id="normal">Mittel</button>
         <button id="schwer">Schwer</button>
         <h3 id="new-game">New Game</h3>
         <h3 id="com">Com</h3>
-        <h3 id="c-number">0</h3>
+        <h3 id="c-number"></h3>
     </div>
 </body>
 <footer>
