player vs com funktioniert

--- a/memory.html
+++ b/memory.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Memory Game</h1>
-    <h2 id="h21">P vs Com</h2><h2 id="h22">P1 vs P2</h2>
+    <h2 id="h21">P vs Com</h2><h2 id="h22">P1 vs P2</h2><h2 id="h23">Com1 vs Com2</h2>
     <div id="game-area">
         <div id="easy-cards" class="isHidden">
         </div>
