--- a/memory.html
+++ b/memory.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Memory Game</h1>
-    <h2 id="h21">P vs Com</h2><h2 id="h22">P1 vs P2</h2><h2 id="h23">Com1 vs Com2</h2>
+    <h2 id="h21">P vs Com</h2><h2 id="h22">P1 vs P2</h2>
     <div id="game-area">
         <div id="easy-cards" class="isHidden">
         </div>
@@ -20,6 +20,7 @@
         </div>
     </div>
     <div id="unten">
+        <h3 id="announce">brrrrrrrrrrrrrrrrrrrrrrrrr</h3>
         <h3 id="player">Player</h3>
         <h3 id="p-number"></h3>
         <h3 id="Stufe">Stufe</h3>
@@ -32,6 +33,7 @@
     </div>
 </body>
 <footer>
-    <p>Quelle der Icon-Grafiken: <a href='https://www.freepik.com/vectors/business'>Business vector created by macrovector - www.freepik.com</a></p>
+    <p>Quelle der Icon-Grafiken: <a href='https://www.freepik.com/vectors/business'>Business vector created by macrovector - www.freepik.com</a>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Leon Gobbert - 266410</p>
 </footer>
 </html>
