--- a/memory.html
+++ b/memory.html
@@ -13,6 +13,8 @@
     <h2 id="h21">P vs Com</h2><h2 id="h22">P1 vs P2</h2>
     <div id="game-area">
         <div id="easy-cards" class="isHidden">
+            Select one of the playmodes, Player vs Computer or Player 1 vs Player 2, and the select one of the difficulty-settings. <br>
+            If you've finished your Game, click on "New Game" to reset everything and start again by selecting playmode and difficulty
         </div>
         <div id="medium-cards" class="isHidden">
         </div>
@@ -20,20 +22,21 @@
         </div>
     </div>
     <div id="unten">
-        <h3 id="announce">brrrrrrrrrrrrrrrrrrrrrrrrr</h3>
-        <h3 id="player">Player</h3>
-        <h3 id="p-number"></h3>
-        <h3 id="Stufe">Stufe</h3>
-        <button id="einfach">Einfach</button>
-        <button id="normal">Mittel</button>
-        <button id="schwer">Schwer</button>
-        <h3 id="new-game">New Game</h3>
-        <h3 id="com">Com</h3>
-        <h3 id="c-number"></h3>
+        <span id="announce">brrrrrrrrrrrrrrrrrrrrrrrrr</span>
+        <span class="line2" id="player">Player:</span>
+        <span class="line2" id="p-number"></span>
+        <span class="line2" id="Stufe">Difficulty:</span>
+        <button class="line2" id="einfach">Easy</button>
+        <button class="line2" id="normal">Medium</button>
+        <button class="line2" id="schwer">Hard</button>
+        <span class="line2" id="com">Com:</span>
+        <span class="line2" id="c-number"></span>
+        <br><br>
+        <button id="new-game">New Game</button>
     </div>
 </body>
 <footer>
-    <p>Quelle der Icon-Grafiken: <a href='https://www.freepik.com/vectors/business'>Business vector created by macrovector - www.freepik.com</a>
+    <p id="footer">Quelle der Icon-Grafiken: <a href='https://www.freepik.com/vectors/business'>Business vector created by macrovector - www.freepik.com</a>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Leon Gobbert - 266410</p>
 </footer>
 </html>
