--- a/memory.html
+++ b/memory.html
@@ -12,9 +12,9 @@
     <h1>Memory Game</h1>
     <h2 id="h21">P vs Com</h2><h2 id="h22">P1 vs P2</h2>
     <div id="game-area">
-        <div id="easy-cards" class="isHidden">
-            Select one of the playmodes, Player vs Computer or Player 1 vs Player 2, and the select one of the difficulty-settings. <br>
-            If you've finished your Game, click on "New Game" to reset everything and start again by selecting playmode and difficulty
+        <div id="easy-cards">
+            Select one of the playmodes, Player vs Computer or Player 1 vs Player 2, and then select one of the difficulty-settings. <br><br>
+            If you've finished a Game, click on "New Game" to reset everything and start again by selecting playmode and difficulty
         </div>
         <div id="medium-cards" class="isHidden">
         </div>
